Fix alignment for when the word 'invited' is displayed instead of the invite button.

--- a/CS5150-Matchmaker/WebContent/css/style.css
+++ b/CS5150-Matchmaker/WebContent/css/style.css
@@ -429,10 +429,6 @@ ul {
 	margin-right: 6px;
 	font-style: italic;
 }
-.placeholder{
-	display: inline-block;
-	width:65px;
-}
 .actionButton.reject{
 	background-color: #ab1a2a;
 }
